# gfx

./: .gitignore  CMakeLists.txt  README.md  gfx.trace  gl_shader_program.hpp  main.lua  stats.txt
data/shaders/: fragment.glsl  screen.frag  screen.vert  vertex.glsl  world.frag  world.vert
data/sounds/: test2.opus
data/textures/: .directory
src/: CMakeLists.txt  main.cpp
src/core/: device.cpp  device.hpp  engine.cpp  engine.hpp  keyboard.hpp  keyboard_keys.hpp  keyboardkeys.hpp  keys.cpp  keys.hpp  mouse.hpp  mouse_keys.hpp  referencecounted.cpp  referencecounted.hpp  sdl2_keyboard.cpp  sdl2_keyboard.hpp  sdl2_mouse.cpp  sdl2_mouse.hpp  sdl2_window.cpp  sdl2_window.hpp  sdl2keys.cpp  sdl2keys.hpp  sdl2window.cpp  sdl2window.hpp  window.cpp  window.hpp  window_event.hpp  windowtype.hpp
src/game/: entity.hpp  game.cpp  game.hpp  level.cpp  level.hpp  marching_cubes.cpp  marching_cubes.hpp  player.cpp  player.hpp  sprite.hpp  world.cpp  world.hpp
src/gfx/: batch.cpp  batch.hpp  camera.hpp  color.cpp  color.hpp  context_settings.cpp  context_settings.hpp  default_shaders.hpp  driver.cpp  driver.hpp  drivertype.hpp  drivertypes.hpp  font.cpp  font.hpp  framebuffer.cpp  framebuffer.hpp  free_image_texture.cpp  free_image_texture.hpp  free_image_texture_loader.cpp  free_image_texture_loader.hpp  free_type_font.cpp  free_type_font.hpp  gl_camera.cpp  gl_camera.hpp  gl_object.cpp  gl_object.hpp  gl_renderer.cpp  gl_renderer.hpp  gl_shader.cpp  gl_shader.hpp  gl_shader_program.cpp  gl_shader_program.hpp  gl_texture.cpp  gl_texture.hpp  gl_vertex_buffer.cpp  gl_vertex_buffer.hpp  glyph.hpp  graphics_device.cpp  graphics_device.hpp  graphics_device_event.hpp  (+48 more)
src/lua/: keyboard_binds.hpp  lua_environment.cpp  lua_environment.hpp  mouse_binds.hpp  utils.hpp  vec2_binds.hpp  window_binds.hpp
src/net/: address.cpp  address.hpp  client.cpp  client.hpp  packet.cpp  packet.hpp  server.cpp  server.hpp
src/sound/: sound.cpp  sound.hpp  sound_player.cpp  sound_player.hpp
